Implementacion de test.api

--- a/notebooks/documentacion.ipynb
+++ b/notebooks/documentacion.ipynb
@@ -624,6 +624,59 @@
    "source": [
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prueba desde el archivo Test API"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ejecutamos el siguiente codigo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Respuesta de la API: {'prediction': 'vgood'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "# 📌 Definir la URL base de la API\n",
+    "API_URL = \"http://127.0.0.1:8080/predict\"\n",
+    "\n",
+    "# 📌 Datos de prueba\n",
+    "test_data = {\n",
+    "    \"buying\": \"low\",\n",
+    "    \"maint\": \"med\",\n",
+    "    \"doors\": \"4\",\n",
+    "    \"persons\": \"4\",\n",
+    "    \"lug_boot\": \"big\",\n",
+    "    \"safety\": \"high\"\n",
+    "}\n",
+    "\n",
+    "# 📌 Hacer la solicitud POST a la API\n",
+    "response = requests.post(API_URL, json=test_data)\n",
+    "\n",
+    "# 📌 Verificar la respuesta\n",
+    "if response.status_code == 200:\n",
+    "    print(\"✅ Respuesta de la API:\", response.json())\n",
+    "else:\n",
+    "    print(\"❌ Error en la API:\", response.status_code, response.text)\n"
+   ]
   }
  ],
  "metadata": {
